--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
     background-color: #dcb1b1;
     border: 4px solid #271b05;
 }
-input{
+#input-area input{
     border: none;
     padding: 40px 20px 10px 40px;
     margin-top: 40px;
@@ -119,3 +119,66 @@ input{
 #yellow{
     background-color: #d2d5bd;
 }
+.news-section{
+    margin-top: 100px;
+    text-align: center;
+}
+.news-section p{
+    color: #d2010f;
+}
+.news-section h1{
+    font-size: 50px;
+    font-weight: 600;
+}
+.blog-section{
+    display: flex;
+    margin-top: 70px;
+
+}
+.blog-div{
+    width: 27%;
+    margin-left: 4%;
+   
+}
+.blog-div img{
+    max-width: 100%;
+    border-radius: 8px;
+}
+.blog-div h3{
+    color: #767676;
+}
+.blog-div h1{
+    font-weight: 500;
+}
+.join-section{
+    text-align: center;
+    margin: 0 160px;
+}
+.join-section h1{
+    font-size: 50px;
+    font-weight: 700;
+}
+.join-section p{
+    font-size: 22px;
+    color: #767676;
+}
+.join-div{
+    background-color: #d8bdae;
+    padding: 50px 60px;
+    width: 60%;
+    margin-left: 180px;
+}
+.join-div input{
+    padding: 20px 70px;
+    background-color: #cfcece;
+    border: none;
+    font-size: 18px;
+}
+.join-div a{
+    background-color: #d2010f;
+    text-decoration: none; 
+    padding: 17px 28px;
+    color: white;
+    font-size: 18px;
+     border-radius: 5px;
+    }
