--- a/style.css
+++ b/style.css
@@ -182,3 +182,17 @@ body{
     font-size: 18px;
      border-radius: 5px;
     }
+    .footer{
+        background-color: black;
+        text-align: center;
+        margin-top: 150px;
+        padding: 30px 50px;
+    }
+    .footer h1{
+        color: #d2010f;
+        font-size: 30px;
+    }
+    .footer p{
+        color: white;
+
+    }
